--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -15,10 +15,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "experimentalDecorators": true
+    "jsx": "react"
   },
   "include": [
     "src"
