--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,10 +10,12 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
+    "final-form": "^4.16.1",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
