--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-alpha.13",
     "final-form": "^4.16.1",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
@@ -19,6 +20,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.2",
+    "react-widgets": "^4.4.11",
+    "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-react": "^0.87.3",
     "typescript": "3.5.3",
     "uuid": "^3.3.2"
