--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-widgets": "^4.3.3",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-alpha.13",
